// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaveformControls matches a snapshot when given basic props 1`] = `
<div>
  <div
    class="waveform-display-control-panel"
  >
    <div
      class="toolbar"
      style="width: 1904px;"
    >
      <div
        class="toolbar__left-group"
      >
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-waveform-zas"
              title="Zoom-align-sort (ZAS) when an event is open (hotkey: z)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  ZAS
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-create-event"
              title="Create new event from selected signal detections or virtual event when no signal detections selected (hotkey: c)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Create Event
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item toolbar-item__left"
        >
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class="bp5-popover-target"
          >
            <button
              class="bp5-button bp5-disabled bp5-align-left"
              data-cy="selection-information"
              disabled=""
              tabindex="-1"
              title="Selected items within display (double click: deselect all items within display, alt+click: global deselect)"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-standard bp5-icon-multi-select"
                data-icon="multi-select"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        class="toolbar__center-group"
      >
        <div
          class="toolbar__whitespace"
          style="width: 1904px;"
        />
      </div>
      <div
        class="toolbar__right-group"
      >
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              title="Event beam settings. Create event beams (hotkey: b). Open an event to enable"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Event Beam
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              title="Rotation settings. Create rotated waveforms: (hotkey: r)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Rotation
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class="bp5-popover-target"
          >
            <button
              class="bp5-button bp5-align-left"
              data-cy="stations-dropdown"
              style="width: 94px;"
              title="Select stations to be shown"
              type="button"
              value="Stations"
            >
              <span
                class="bp5-button-text"
              >
                Stations
              </span>
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                data-icon="caret-down"
              />
            </button>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-current-phase"
              title="Current phase menu (hotkey: ctrl+p)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Current Phase
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-selector"
                data-cy="mode-dropdown"
              >
                <div
                  class="bp5-html-select bp5-disabled"
                >
                  <select
                    disabled=""
                    style="min-width: 130px; width: 130px;"
                    title="Set the display mode"
                  >
                    <option
                      value="Default"
                    >
                      Default
                    </option>
                    <option
                      value="Measurement"
                    >
                      Measurement
                    </option>
                  </select>
                  <span
                    class="bp5-icon bp5-icon-double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Open dropdown
                      </title>
                      <path
                        d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class="bp5-popover-target"
          >
            <button
              class="bp5-button bp5-align-left"
              data-cy="scaling-option-selector"
              title="Waveform amplitude scaling options"
              type="button"
              value="Auto"
            >
              <span
                class="bp5-button-text"
              >
                Scale: 
                Auto
              </span>
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                data-icon="caret-down"
              />
            </button>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp5-button bp5-disabled bp5-align-left toolbar-button"
                disabled=""
                style="width: 88px;"
                tabindex="-1"
                title="Set default phase of new signal detections"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span>
                    P
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                    data-icon="caret-down"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="numeric-input__wrapper"
              style="width: 100px;"
            >
              <div
                class="bp5-control-group bp5-fill bp5-numeric-input numeric-input undefined"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-valuemax="100"
                    aria-valuemin="1"
                    aria-valuenow="20"
                    autocomplete="off"
                    class="bp5-input"
                    data-cy="num-waveform-input"
                    id="numericInput-0"
                    max="100"
                    min="1"
                    placeholder="Enter a number..."
                    role="spinbutton"
                    title="Sets the number of visible channels per screen"
                    type="text"
                    value="20"
                    width="100"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-0"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                          transform-origin="center"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-0"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                          transform-origin="center"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-waveform-align"
              style="width: 154px;"
              title="Time"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Change Alignment
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-label"
              >
                Sort: 
              </span>
              <span
                class="dropdown-selector"
                data-cy="sort-dropdown"
              >
                <div
                  class="bp5-html-select"
                >
                  <select
                    style="min-width: 130px; width: 130px;"
                    title="Set the sort order of stations"
                  >
                    <option
                      value="Distance"
                    >
                      Distance
                    </option>
                    <option
                      value="Station: A-Z"
                    >
                      Station: A-Z
                    </option>
                    <option
                      value="Station: Z-A"
                    >
                      Station: Z-A
                    </option>
                  </select>
                  <span
                    class="bp5-icon bp5-icon-double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Open dropdown
                      </title>
                      <path
                        d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
          >
            <div
              class="toolbar-switch-label"
            >
              Time Uncertainty:
            </div>
            <label
              class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint time-uncertainty"
            >
              <input
                title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
                type="checkbox"
              />
              <span
                class="bp5-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide predicted phases"
          >
            <div
              class="toolbar-switch-label"
            >
              Predicted Phases:
            </div>
            <label
              class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint predicted-phases"
            >
              <input
                checked=""
                data-cy="Predicted Phases"
                title="Show/Hide predicted phases"
                type="checkbox"
              />
              <span
                class="bp5-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp5-button bp5-align-left toolbar-button"
                title="Control visibility of signal detections"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span>
                    Show Detections
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                    data-icon="caret-down"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp5-button bp5-align-left toolbar-button"
                style="width: 110px;"
                title="Show/Hide categories of QC masks"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span>
                    QC Masks
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-standard bp5-icon-caret-down"
                    data-icon="caret-down"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-disabled bp5-align-left toolbar-button"
              disabled=""
              tabindex="-1"
              title="Create QC segment for open time range. Select one or more raw channels to enable."
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Create QC Segment
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide Measure Window"
          >
            <div
              class="toolbar-switch-label"
            >
              Measure Window:
            </div>
            <label
              class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint measure-window"
            >
              <input
                title="Show/Hide Measure Window"
                type="checkbox"
              />
              <span
                class="bp5-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-button-group"
          >
            <div>
              <button
                class="bp5-button toolbar-button--icon-only"
                data-cy="btn-load-waveform-left"
                style="width: 30px; margin-right: 2px;"
                title="Load more data before open time range"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-standard bp5-icon-arrow-left"
                    data-icon="arrow-left"
                  />
                </span>
              </button>
            </div>
            <div>
              <button
                class="bp5-button toolbar-button--icon-only"
                data-cy="btn-load-waveform-right"
                style="width: 30px;"
                title="Load more data after open time range"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-standard bp5-icon-arrow-right"
                    data-icon="arrow-right"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="loading-indicator__container"
    data-cy="waveform-loading-indicator"
  />
</div>
`;

exports[`WaveformControls matches a snapshot when given missing props 1`] = `
<div>
  <div
    class="waveform-display-control-panel"
  >
    <div
      class="toolbar"
      style="width: 1904px;"
    >
      <div
        class="toolbar__left-group"
      >
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-waveform-zas"
              title="Zoom-align-sort (ZAS) when an event is open (hotkey: z)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  ZAS
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item toolbar-item__left"
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-create-event"
              title="Create new event from selected signal detections or virtual event when no signal detections selected (hotkey: c)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Create Event
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item toolbar-item__left"
        >
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class="bp5-popover-target"
          >
            <button
              class="bp5-button bp5-disabled bp5-align-left"
              data-cy="selection-information"
              disabled=""
              tabindex="-1"
              title="Selected items within display (double click: deselect all items within display, alt+click: global deselect)"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-multi-select"
              >
                <svg
                  data-icon="multi-select"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 3.98H4c-.55 0-1 .45-1 1v1h8v5h1c.55 0 1-.45 1-1v-5c0-.55-.45-1-1-1zm3-3H7c-.55 0-1 .45-1 1v1h8v5h1c.55 0 1-.45 1-1v-5c0-.55-.45-1-1-1zm-6 6H1c-.55 0-1 .45-1 1v5c0 .55.45 1 1 1h8c.55 0 1-.45 1-1v-5c0-.55-.45-1-1-1zm-1 5H2v-3h6v3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="toolbar__center-group"
      >
        <div
          class="toolbar__whitespace"
          style="width: 1904px;"
        />
      </div>
      <div
        class="toolbar__right-group"
      >
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              title="Event beam settings. Create event beams (hotkey: b). Open an event to enable"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Event Beam
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              title="Rotation settings. Create rotated waveforms: (hotkey: r)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Rotation
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class="bp5-popover-target"
          >
            <button
              class="bp5-button bp5-align-left"
              data-cy="stations-dropdown"
              style="width: 94px;"
              title="Select stations to be shown"
              type="button"
              value="Stations"
            >
              <span
                class="bp5-button-text"
              >
                Stations
              </span>
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-current-phase"
              title="Current phase menu (hotkey: ctrl+p)"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Current Phase
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-selector"
                data-cy="mode-dropdown"
              >
                <div
                  class="bp5-html-select bp5-disabled"
                >
                  <select
                    disabled=""
                    style="min-width: 130px; width: 130px;"
                    title="Set the display mode"
                  >
                    <option
                      value="Default"
                    >
                      Default
                    </option>
                    <option
                      value="Measurement"
                    >
                      Measurement
                    </option>
                  </select>
                  <span
                    class="bp5-icon bp5-icon-double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Open dropdown
                      </title>
                      <path
                        d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class="bp5-popover-target"
          >
            <button
              class="bp5-button bp5-align-left"
              data-cy="scaling-option-selector"
              title="Waveform amplitude scaling options"
              type="button"
              value="Auto"
            >
              <span
                class="bp5-button-text"
              >
                Scale: 
                Auto
              </span>
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp5-button bp5-disabled bp5-align-left toolbar-button"
                disabled=""
                style="width: 88px;"
                tabindex="-1"
                title="Set default phase of new signal detections"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span>
                    P
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="numeric-input__wrapper"
              style="width: 100px;"
            >
              <div
                class="bp5-control-group bp5-fill bp5-numeric-input numeric-input undefined"
              >
                <div
                  class="bp5-input-group"
                >
                  <input
                    aria-valuemax="100"
                    aria-valuemin="1"
                    aria-valuenow="20"
                    autocomplete="off"
                    class="bp5-input"
                    data-cy="num-waveform-input"
                    id="numericInput-1"
                    max="100"
                    min="1"
                    placeholder="Enter a number..."
                    role="spinbutton"
                    title="Sets the number of visible channels per screen"
                    type="text"
                    value="20"
                    width="100"
                  />
                </div>
                <div
                  class="bp5-button-group bp5-vertical bp5-fixed"
                >
                  <button
                    aria-controls="numericInput-1"
                    aria-label="increment"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-up"
                    >
                      <svg
                        data-icon="chevron-up"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M254.2 134.2L174.2 214.2C170.6 217.8 165.6 220 160 220S149.4 217.8 145.8 214.2L65.8 134.2C62.2 130.6 60 125.6 60 120C60 109 69 100 80 100C85.6 100 90.6 102.2 94.2 105.8L160 171.8L225.8 106C229.4 102.2 234.4 100 240 100C251 100 260 109 260 120C260 125.6 257.8 130.6 254.2 134.2z"
                          fill-rule="evenodd"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                          transform-origin="center"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-controls="numericInput-1"
                    aria-label="decrement"
                    class="bp5-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp5-icon bp5-icon-chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M240 220C234.4 220 229.4 217.8 225.8 214.2L160 148.2L94.2 214.2C90.6 217.8 85.6 220 80 220C69 220 60 211 60 200C60 194.4 62.2 189.4 65.8 185.8L145.8 105.8C149.4 102.2 154.4 100 160 100S170.6 102.2 174.2 105.8L254.2 185.8C257.8 189.4 260 194.4 260 200C260 211 251 220 240 220z"
                          fill-rule="evenodd"
                          transform="scale(0.05, -0.05) translate(-160, -160)"
                          transform-origin="center"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-align-left toolbar-button"
              data-cy="btn-waveform-align"
              style="width: 154px;"
              title="Predicted P"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Change Alignment
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-label"
              >
                Sort: 
              </span>
              <span
                class="dropdown-selector"
                data-cy="sort-dropdown"
              >
                <div
                  class="bp5-html-select"
                >
                  <select
                    style="min-width: 130px; width: 130px;"
                    title="Set the sort order of stations"
                  >
                    <option
                      value="Distance"
                    >
                      Distance
                    </option>
                    <option
                      value="Station: A-Z"
                    >
                      Station: A-Z
                    </option>
                    <option
                      value="Station: Z-A"
                    >
                      Station: Z-A
                    </option>
                  </select>
                  <span
                    class="bp5-icon bp5-icon-double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Open dropdown
                      </title>
                      <path
                        d="M100 180H220C231 180 240 189 240 200C240 205.6 237.8 210.6 234.2 214.2L174.2 274.2C170.6 277.8 165.6 280 160 280S149.4 277.8 145.8 274.2L85.8 214.2C82.2 210.6 80 205.6 80 200C80 189 89 180 100 180zM220 140H100C89 140 80 131 80 120C80 114.4 82.2 109.4 85.8 105.8L145.8 45.8C149.4 42.2 154.4 40 160 40S170.6 42.2 174.2 45.8L234.2 105.8C237.8 109.4 240 114.4 240 120C240 131 231 140 220 140z"
                        fill-rule="evenodd"
                        transform="scale(0.05, -0.05) translate(-160, -160)"
                        transform-origin="center"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
          >
            <div
              class="toolbar-switch-label"
            >
              Time Uncertainty:
            </div>
            <label
              class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint time-uncertainty"
            >
              <input
                title="Show/hide time uncertainty bars on signal detections (Ctrl + Shift + U)"
                type="checkbox"
              />
              <span
                class="bp5-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide predicted phases"
          >
            <div
              class="toolbar-switch-label"
            >
              Predicted Phases:
            </div>
            <label
              class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint predicted-phases"
            >
              <input
                checked=""
                data-cy="Predicted Phases"
                title="Show/Hide predicted phases"
                type="checkbox"
              />
              <span
                class="bp5-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp5-button bp5-align-left toolbar-button"
                title="Control visibility of signal detections"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span>
                    Show Detections
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <div>
              <button
                class="bp5-button bp5-align-left toolbar-button"
                style="width: 110px;"
                title="Show/Hide categories of QC masks"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span>
                    QC Masks
                  </span>
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div>
            <button
              class="bp5-button bp5-disabled bp5-align-left toolbar-button"
              disabled=""
              tabindex="-1"
              title="Create QC segment for open time range. Select one or more raw channels to enable."
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                <span>
                  Create QC Segment
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-switch"
            title="Show/Hide Measure Window"
          >
            <div
              class="toolbar-switch-label"
            >
              Measure Window:
            </div>
            <label
              class="bp5-control bp5-switch bp5-large toolbar-switch__blueprint measure-window"
            >
              <input
                title="Show/Hide Measure Window"
                type="checkbox"
              />
              <span
                class="bp5-control-indicator"
              />
            </label>
          </div>
        </div>
        <div
          class="toolbar-item
                  "
        >
          <div
            class="toolbar-button-group"
          >
            <div>
              <button
                class="bp5-button toolbar-button--icon-only"
                data-cy="btn-load-waveform-left"
                style="width: 30px; margin-right: 2px;"
                title="Load more data before open time range"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-arrow-left"
                  >
                    <svg
                      data-icon="arrow-left"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div>
              <button
                class="bp5-button toolbar-button--icon-only"
                data-cy="btn-load-waveform-right"
                style="width: 30px;"
                title="Load more data after open time range"
                type="button"
              >
                <span
                  class="bp5-button-text"
                >
                  <span
                    aria-hidden="true"
                    class="bp5-icon bp5-icon-arrow-right"
                  >
                    <svg
                      data-icon="arrow-right"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="loading-indicator__container"
    data-cy="waveform-loading-indicator"
  />
</div>
`;
